# mock-my-draft

./: .dockerignore  .env.development.sample  .env.example  .env.production.sample  .eslintrc.json  .gitignore  .npmrc  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  init-db.sql  jest.config.ts  lint-staged.config.js  migrations.json  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  turbo.json
.claude/: launch.json
.github/workflows/: ci-cd.yml  ci.yml  docker-build.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
__tests__/: page.test.tsx
api/: package.json
api/docker/: Dockerfile
api/src/: data-processor.ts  (+2 more)
apps/text-analysis-service/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  package.json  project.json  pyproject.toml  railway.toml
apps/text-analysis-service/app/: main.py
apps/text-analysis-service/app/core/: config.py
apps/text-analysis-service/app/services/: sentiment_analysis.py  word_count.py
apps/text-analysis-service/scripts/: healthcheck.py
apps/text-analysis-service/tests/: test_analyze_sentiment.py  test_health.py  test_word_counter.py
docker/: Dockerfile  docker-compose.yml
docs/: batch2-completion-report.md  batch3-completion-report.md  database-migrations.md
scripts/: build-and-push-docker.sh  deploy.sh  healthcheck.js  rollback.sh
(+524 files in other folders)
