[project]
name = "text-analysis-service"
version = "1.0.0"
description = "Sentiment analysis and word counting for NFL draft evaluations."
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.9,<3.11"
dependencies = [
  "fastapi>=0.111.1",
  "uvicorn>=0.30.1",
  "pydantic>=2.8.2",
  "sqlalchemy>=2.0.31",
  "psycopg2-binary>=2.9.9",
  "python-dotenv>=1.0.1",
  "nltk>=3.8.1",
  "scikit-learn>=1.5.1",
]

[dependency-groups]
dev = [
  "autopep8==2.0.2",
  "flake8==6.0.0",
  "pytest==7.3.1",
  "pytest-sugar==0.9.7",
  "pytest-cov==4.1.0",
  "pytest-html==3.2.0",
  "httpx>=0.27.0",
  "pytest-mock>=3.14.0",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../coverage/apps/text-analysis-service/html' --cov-report xml:'../../coverage/apps/text-analysis-service/coverage.xml' --html='../../reports/apps/text-analysis-service/unittests/html/index.html' --junitxml='../../reports/apps/text-analysis-service/unittests/junit.xml'"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
